--- a/index.html
+++ b/index.html
@@ -4,26 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather App</title>
-    <link rel="manifest" href="manifest.json">
+    <link rel="manifest" href="/BostanProject/manifest.json">
     <meta name="theme-color" content="#2196f3">
-    <link rel="apple-touch-icon" href="images/icons/icon-192x192.png">
+    <link rel="apple-touch-icon" href="/BostanProject/images/icons/icon-192x192.png">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/animations.css">
+    <link rel="stylesheet" href="/BostanProject/css/style.css">
+    <link rel="stylesheet" href="/BostanProject/css/animations.css">
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
     <script>
         if ('serviceWorker' in navigator) {
-            window.addEventListener('load', () => {
-                navigator.serviceWorker.register('service-worker.js')
-                    .then(registration => {
-                        console.log('Service Worker registered');
-                    })
-                    .catch(error => {
-                        console.log('Service Worker registration failed:', error);
+            window.addEventListener('load', async () => {
+                try {
+                    const registration = await navigator.serviceWorker.register('/BostanProject/service-worker.js', {
+                        scope: '/BostanProject/'
                     });
+                    console.log('Service Worker registered successfully:', registration);
+                } catch (error) {
+                    console.error('Service Worker registration failed:', error);
+                }
             });
 
         window.addEventListener('online', function() {
@@ -36,7 +37,7 @@
             if ('Notification' in window && Notification.permission === 'granted') {
                 new Notification('Weather App', {
                     body: 'App is now offline. Some features may be unavailable.',
-                    icon: 'images/icons/icon-192x192.png'
+                    icon: '/BostanProject/images/icons/icon-192x192.png'
                 });
             }
         });
@@ -140,6 +141,6 @@
         </nav>
     </div>
     
-    <script src="js/weather.js"></script>
+    <script src="/BostanProject/js/weather.js"></script>
 </body>
 </html>
